tests/snapshots/examples_fixtures/io__aoc_day2_part2.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/io/aoc_day2_part2.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E011]: PRIVATE MEMBER

Cannot access private member `solve_file`.

  --> examples/io/aoc_day2_part2.flx:7:11
  |
7 |     print(Day2.solve_file("examples/io/aoc_day2.txt"))
  |           ^^^^^^^^^^^^^^^

Hint:
  Private members can only be accessed within the same module. Use `public fn` to export a function.
== stdout ==
<not executed>
